add google analytics support this is achieved by adding a keyword to display-name

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
   <div th:if="${!displayAppLogos}" id="applist">
     <ul>
       <li th:each="app: ${apps}">
-        <a th:href="@{/app/}+${app.id}+@{?sp_hide_navbar=true}" th:text="${app.displayName == null} ? ${app.id} : ${app.displayName}"></a>
+        <a th:href="@{/app/}+${app.id}+@{?sp_hide_navbar=true}" th:text="${app.displayName == null} ? ${app.id} : ${#strings.arraySplit(app.displayName, '@@')[0]}"></a>
         <br th:if="${app.description != null}" />
         <span th:if="${app.description != null}" th:utext="${app.description}"></span>
       </li>
@@ -54,7 +54,7 @@
             <img th:if="${appLogos.get(app) != null}" th:src="${appLogos.get(app)}"></img>
           </div>
           <div class="media-body">
-            <a th:href="@{/app/}+${app.id}+@{?sp_hide_navbar=true}" th:text="${app.displayName == null} ? ${app.id} : ${app.displayName}"></a>
+            <a th:href="@{/app/}+${app.id}+@{?sp_hide_navbar=true}" th:text="${app.displayName == null} ? ${app.id} : ${#strings.arraySplit(app.displayName, '@@')[0]"></a>
             <br th:if="${app.description != null}" />
             <span th:if="${app.description != null}" th:utext="${app.description}"></span>
           </div>
